2005-08-10 09:19  chris

	* MANIFEST, MANIFEST.SKIP: Add examples to MANIFEST

2005-08-10 09:16  chris

	* Makefile.PL: Fix typo

2005-08-10 09:13  chris

	* example/example.fla, example/lib/includetest.as,
	  example/lib/example1/redherring.as,
	  example/lib/example1/testclass.as,
	  example/lib/example2/redherring.as,
	  example/lib/example2/testclass.as,
	  example/lib/example3/redherring.as,
	  example/lib/example3/testclass.as,
	  example/lib/example4/redherring.as,
	  example/lib/example4/testclass.as,
	  example/lib/example5/redherring.as,
	  example/lib/example5/testclass.as,
	  example/lib/example6/redherring.as,
	  example/lib/example6/testclass.as,
	  example/lib/example7/redherring.as,
	  example/lib/example7/testclass.as, lib/SWF/NeedsRecompile.pm,
	  t/1.t: Add regression tests Fix a bug in the "new Class()"
	  detection

2005-08-09 17:19  chris

	* lib/SWF/NeedsRecompile.pm: Update docs Make check_files rturn the
	  input filename, not the .swf filename

2005-08-09 16:49  chris

	* Build.PL, LICENSE, MANIFEST, MANIFEST.SKIP, Makefile.PL, README,
	  lib/SWF/NeedsRecompile.pm, t/1.t: Initial revision

2005-08-09 16:49  chris

	* Build.PL, LICENSE, MANIFEST, MANIFEST.SKIP, Makefile.PL, README,
	  lib/SWF/NeedsRecompile.pm, t/1.t: initial import
