@@ -23,4 +23,6 @@ Makefile.PL
 MANIFEST			This list of files
 META.yml
 README
-t/1.t
+t/pod-coverage.t
+t/pod.t
+t/swf.t
