@@ -37,7 +37,7 @@ a:hover {
 
 <p class="title">SWF-NeedsRecompile</p>
 
-<p class="subtitle">Last update: <a href="perl/SWF-NeedsRecompile-1.00-docs">v1.00</a>, 2005-08-10</p>
+<p class="subtitle">Last update: <a href="perl/SWF-NeedsRecompile-1.01-docs">v1.01</a>, 2005-09-21</p>
 
 
 <table cellspacing="0" cellpadding="2" border="1" width="100%">
@@ -53,6 +53,22 @@ a:hover {
       <tr>
         <td valign="top"><a href="#perl">Perl</a></td>
         <td valign="top">
+          <a href="perl/SWF-NeedsRecompile-1.01.tgz">SWF-NeedsRecompile-1.01.tgz</a>
+          (<a href="perl/SWF-NeedsRecompile-1.01.tgz.md5">MD5</a>)
+          <br>
+          <a href="perl/SWF-NeedsRecompile-1.01.zip">SWF-NeedsRecompile-1.01.zip</a>
+          (<a href="perl/SWF-NeedsRecompile-1.01.zip.md5">MD5</a>)
+          
+            <br>
+            <a href="perl/SWF-NeedsRecompile-1.01-docs">SWF-NeedsRecompile-1.01-docs</a>
+          
+        </td>
+        <td valign="top">Wed Sep 21 17:10:32 2005</td>
+      </tr>
+    
+      <tr>
+        <td valign="top"><a href="#perl">Perl</a></td>
+        <td valign="top">
           <a href="perl/SWF-NeedsRecompile-1.00.tgz">SWF-NeedsRecompile-1.00.tgz</a>
           (<a href="perl/SWF-NeedsRecompile-1.00.tgz.md5">MD5</a>)
           <br>
@@ -63,7 +79,7 @@ a:hover {
             <a href="perl/SWF-NeedsRecompile-1.00-docs">SWF-NeedsRecompile-1.00-docs</a>
           
         </td>
-        <td valign="top">Wed Aug 10 09:07:15 2005</td>
+        <td valign="top">Wed Aug 10 09:12:27 2005</td>
       </tr>
     
   </tbody>
